Implement search feature using Observables

--- a/src/app/dashboard.component.html
+++ b/src/app/dashboard.component.html
@@ -6,3 +6,6 @@
     </div>
   </a>
 </div>
+
+<!-- This is all you need to add a component to the page once created -->
+<hero-search></hero-search>
